--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: splash
 
 
 <section id="Services" align="center">
-  <div class="wow fadeInUp" data-wow-delay="1.4s">
+ <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
 <!--   <div class="col-lg-2">
   </div> -->
 <!-- 	<div class="col-lg-12" style="padding: 150px 15% 0px 15%; background: url(http://i1045.photobucket.com/albums/b459/keenanhi/bg3_zpsbxllc2tb.jpg) no-repeat center center;   background-size: cover; 
@@ -136,8 +136,112 @@ layout: splash
 </div>
 
 
+  <div id="hear" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;">
 
-  <div class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+            <div class="row-fluid">
+              <h1 style="font-size: 350%; color: #FFF; text-align: center; text-shadow: 0px 0px 20px #000;">What can you expect from Get Mastered?</h1>
+          </div>
+          </div>
+
+<div class="col-lg-6 bg-white" style="padding: 5%; margin: 0px;">
+                      <div class="row-fluid">
+
+
+<h3>
+            Matt O'Connor (of Tuxis Giant)
+            </h3>
+
+<p>
+<i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i>
+            <br>
+            <br>
+
+<b>Before:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187970&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+<b>After:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187982&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+
+<br>
+<br>
+</p>
+
+
+<h3>
+            The Brain Collective
+            </h3>
+
+<p>
+
+<b>Before:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187974&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<b>After:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187986&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+</p>
+
+</div>
+          </div>
+
+
+<div class="col-lg-6 bg-white" style="padding: 5%; margin: 0px;">
+                      <div class="row-fluid">
+
+
+<h3>
+            Colin Zelin (of Traded)
+            </h3>
+
+<p>
+<i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
+            <br>
+            <br>
+
+<b>Before:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187972&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+<b>After:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187984&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<br>
+<br>
+</p>
+
+
+<h3>
+            Anna Milk
+            </h3>
+
+<p>
+
+<b>Before:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187981&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+<b>After:</b>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187991&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+</p>
+
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+  <div id="rates" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
             <div class="row-fluid">
@@ -145,7 +249,7 @@ layout: splash
           </div>
           </div>
 
-                    <div id="rates" class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+                    <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
                       <div class="row-fluid">
 
             <img class="hidden-sm hidden-xs hidden-md" src="mastering-rates.png" alt="pricing" width="100%">
@@ -199,9 +303,6 @@ layout: splash
             <br> -->
             <p>
 
-Check out <a href="/hear-the-difference/">some of my past clients</a> and see what they thought of their mastered tracks. <br>
-    <br>
-
 
             <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i>
             <br>
@@ -233,15 +334,19 @@ Check out <a href="/hear-the-difference/">some of my past clients</a> and see wh
         </div>
       </div>
 
-      <div class="row-fluid bg-white" style="padding-top: 10%">
-Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/appzgear" title="Appzgear">Appzgear</a>, <a href="http://www.flaticon.com/authors/anton-saputro" title="Anton Saputro">Anton Saputro</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+      
   <br>
   </div>
+
 
 <!-- <div class="col-lg-2">
   </div> -->
 
-</div>
+<!-- </div> -->
+
+<!--   <div class="row-fluid bg-white" style="padding-top: 10%">
+Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/appzgear" title="Appzgear">Appzgear</a>, <a href="http://www.flaticon.com/authors/anton-saputro" title="Anton Saputro">Anton Saputro</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div> -->
+
 
 </section>
 
