--- a/index.html
+++ b/index.html
@@ -172,10 +172,13 @@ layout: splash
 
 
 <h3>
-            The Brain Collective
+            Jack Tarricone (of The Brain Collective)
             </h3>
 
 <p>
+  <i>"Excellent service, very professional and easy to work with. Keenan edited his work on pieces that I wanted modified, and was very punctual and flexible throughout the whole process"</i>
+  <br>
+  <br>
 
 <b>Before:</b>
 
@@ -325,6 +328,12 @@ layout: splash
             <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i>
             <br>
             Matthew O'Connor 
+            <br>
+            <br>
+
+            <i>"Excellent service, very professional and easy to work with. Keenan edited his work on pieces that I wanted modified, and was very punctual and flexible throughout the whole process"</i>
+            <br>
+            Jack Tarricone
             <br>
             <br>     
 
