--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Enter your email address below to get started!</b></p>
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 24px;">
-  My name is Keenan, and I founded Get Mastered because there is simply nowhere for artists to connect with audio engineers at affordable, realistic prices.
+  My name is Keenan, and I founded Get Mastered because there is simply nowhere for artists to connect with experienced audio engineers at affordable, realistic prices.
 <br>
 <br>
   <b>
@@ -334,6 +334,16 @@ Enter your email address below to get started!</b></p>
             Max Gunther
             <br>
             <br> 
+
+            <i>"Getmastered.com is everything a musician needs. Keenan tweaks 
+            everything how you want it to be until you are satisfied and gets 
+            everything done very quickly. If you need something done in really 
+            short period of time, you can't go wrong with this guy. Great sound 
+            quality and fully professional service"</i>
+            <br>
+            Adam of Hope Burn
+            <br>
+            <br>
 
             <i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
             <br>
