--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: splash
     <h1 style="font-size: 600%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Project, Free</h1>
 
           <p style="font-size: 170%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make to your recordings with a free mix or master, yours to keep.<br><br>
+            Hear the difference we can make to your recordings with a free master, yours to keep.<br><br>
 
 <p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
 Enter your email address below to get started!</b></p>
@@ -141,7 +141,7 @@ Enter your email address below to get started!</b></p>
 
   <br>
   <br>
-  In addition to mixing and mastering, Get Mastered offers other audio restoration services for podcasters, voiceovers, or anything else audio. <a href="/about/What-Is-Get-Mastered/">Click here for more about us.</a>
+  In addition to mastering, Get Mastered offers stem mastering, as well as other audio restoration services for podcasters, voiceovers, or anything else audio. <a href="/about/What-Is-Get-Mastered/">Click here for more about us.</a>
 <!-- 
   <br>
   <br>
@@ -264,16 +264,16 @@ Enter your email address below to get started!</b></p>
   background-attachment: fixed;">
 
             <div class="row-fluid">
-              <h1 style="font-size: 350%; color: #FFF; text-align: center; text-shadow: 0px 0px 20px #000;">What are our rates after your free master or mix?</h1>
+              <h1 style="font-size: 350%; color: #FFF; text-align: center; text-shadow: 0px 0px 20px #000;">What are our rates after your free master?</h1>
           </div>
           </div>
 
-                    <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+                    <div class="col-lg-12" style="padding: 5%; margin: 0px; background-color: #34AA83;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="mastering-rates.png" alt="pricing" width="100%">
+            <img class="hidden-sm hidden-xs hidden-md" src="img/mastering-rates-only.png" alt="pricing" width="50%">
 
-            <img class="hidden-lg hidden-xl" src="mastering-rates.png" alt="pricing" width="100%">
+            <img class="hidden-lg hidden-xl" src="img/mastering-rates-only.png" alt="pricing" width="75%">
             <!-- <p style="color: #fff;">  Projects with higher track counts qualify for rates even lower than $39 per song. <a href="mailto:services@getmastered.com" style="color: #fff;">Contact me for more info.</a>
               <br>
       
@@ -285,13 +285,13 @@ Enter your email address below to get started!</b></p>
 </div>
 </div>
 
-<div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #5D8BBF;">
+<!-- <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #5D8BBF;">
             <div class="row-fluid">
               <img class="hidden-sm hidden-xs hidden-md" src="mixing-rates.png" alt="pricing" width="100%">
 
             <img class="hidden-lg hidden-xl" src="mixing-rates.png" alt="pricing" width="100%">
   </div>
-</div>
+</div> -->
 
 <div class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
 <div class="row-fluid">
