--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Enter your email address below to get started!</b></p>
 
 
 <h3>
-            Post- ock:
+            Post Rock:
             </h3>
 
 <p>
