--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@ Enter your email address below to get started!</b></p>
             <br> -->
             <p>
 
+              <i>"Keenan was extremely prompt and professional and made me feel like my project was #1 on his agenda! Very satisfied with Get Mastered and will be using them from now on!"</i>
+            <br>
+            Alex Ward
+            <br>
+            <br>
+
 
             <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i>
             <br>
