--- a/index.html
+++ b/index.html
@@ -395,6 +395,12 @@ Enter your email address below to get started!</b></p>
             <br>
             <br>
 
+            <i>"Keenan’s mastering was brilliant. All of the hours I spent recording and writing my song became totally worth it once I placed in in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too"</i>
+            <br>
+            Matt Bennett
+            <br>
+            <br>
+
             <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
             <br>
             Max Gunther
