--- a/index.html
+++ b/index.html
@@ -401,6 +401,12 @@ Enter your email address below to get started!</b></p>
             <br>
             <br>
 
+            <i>"Keenan was very professional, polite, and informative working with me on my track. He answered my questions and made sure that it came out the way I wanted. Not only did it come out sounding stellar, but I learned a bit about my craft as well. I'll be using him in the future for mastering my work"</i>
+            <br>
+            Asa Jones
+            <br>
+            <br>
+
             <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
             <br>
             Max Gunther
