--- a/index.html
+++ b/index.html
@@ -407,6 +407,12 @@ Enter your email address below to get started!</b></p>
             <br>
             <br>
 
+            <i>"I was very impressed with the work Keenan did to my mix.  He helped to make my lo-fi recording sound clean and crisp, was receptive to any further requests, and handled all communications in a professional manner"</i>
+            <br>
+            Hilary of btwolf
+            <br>
+            <br>
+
             <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
             <br>
             Max Gunther
