--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ Enter your email address below to get started!</b></p>
             <br>
             <br>
 
-            <i>"Keenan’s mastering was brilliant. All of the hours I spent recording and writing my song became totally worth it once I placed in in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too"</i>
+            <i>"Keenan’s mastering was brilliant. All of the hours I spent recording and writing my song became totally worth it once I placed it in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too"</i>
             <br>
             Matt Bennett
             <br>
