--- a/index.html
+++ b/index.html
@@ -317,9 +317,6 @@ Enter your email address below to get started!</b></p>
 
 
 
-
-
-
   <div id="rates" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
@@ -328,20 +325,20 @@ Enter your email address below to get started!</b></p>
           </div>
           </div>
 
-                    <div class="col-lg-12" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+                    <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="img/mastering-rates-only.png" alt="pricing" width="50%">
+            <img class="hidden-sm hidden-xs hidden-md" src="img/what-do-you-pay.png" alt="pricing" width="50%">
 
-            <img class="hidden-lg hidden-xl" src="img/mastering-rates-only.png" alt="pricing" width="75%">
-            <!-- <p style="color: #fff;">  Projects with higher track counts qualify for rates even lower than $39 per song. <a href="mailto:services@getmastered.com" style="color: #fff;">Contact me for more info.</a>
-              <br>
-      
-            </p> -->
+            <img class="hidden-lg hidden-xl" src="img/what-do-you-pay.png" alt="pricing" width="75%">
+</div>
+</div>
+<div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+                      <div class="row-fluid">
 
+            <img class="hidden-sm hidden-xs hidden-md" src="img/what-do-you-get.png" alt="pricing" width="50%">
 
-
-
+            <img class="hidden-lg hidden-xl" src="img/what-do-you-get.png" alt="pricing" width="75%">
 </div>
 </div>
 
