--- a/examples/index.html
+++ b/examples/index.html
@@ -199,7 +199,7 @@ layout: splash
 
 	</div>
 
-<div class="col-lg-12 bg-white" style="padding: 0%;">
+<div class="col-lg-12 bg-gray" style="padding: 0%;">
 	<div class="row-fluid" style="padding: 5% 10% 0% 10%; text-align: center;">
 
 
