--- a/examples/index.html
+++ b/examples/index.html
@@ -190,7 +190,7 @@ layout: splash
 
 	<br>
 
-	<a href="http://www.soundcloud.com/getmastered" style="text-align: center; font-size: 500%;text-shadow: 0px 0px 20px #000;">Check out our soundcloud HERE
+	<a target="_blank" href="http://www.soundcloud.com/getmastered" style="text-align: center; font-size: 500%;text-shadow: 0px 0px 20px #000;">Check out our soundcloud HERE
 	</a>
 
 	<br>
