--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Enter your email address below to get started!</b></p>
 
   <br>
   <br>
-  In addition to mastering, Get Mastered offers stem mastering, as well as other audio restoration services for podcasters, voiceovers, or anything else audio. <a href="/about/What-Is-Get-Mastered/">Click here for more about us.</a>
+  In addition to mastering, Get Mastered offers stem mastering, as well as other audio restoration services for podcasters, voiceovers, or anything else audio. <a target="_blank" href="/about/What-Is-Get-Mastered/">Click here for more about us.</a>
 <!-- 
   <br>
   <br>
@@ -230,7 +230,7 @@ Enter your email address below to get started!</b></p>
 <div class="col-lg-12" style="padding: 0% 5% 5% 5%;">
 
             <div class="row-fluid" style="padding: 0px;">
-              <a href="/examples/" class="master-color" style="font-size: 350%; text-align: center;">Click HERE for even more examples of our work</a>
+              <a target="_blank" href="/examples/" class="master-color" style="font-size: 350%; text-align: center;">Click HERE for even more examples of our work</a>
           </div>
           </div>
 
@@ -278,7 +278,7 @@ Enter your email address below to get started!</b></p>
 <h1 style="font-size: 300%; color: #000; text-align: center;">Ready? </h1>
 <br>
 
-<h1 style="font-size: 300%; color: #000; text-align: center;"><a href="/submit/">CLICK HERE FOR SUBMISSION INFO</a> </h1>
+<h1 style="font-size: 300%; color: #000; text-align: center;"><a target="_blank" href="/submit/">CLICK HERE FOR SUBMISSION INFO</a> </h1>
 <br>
 
 
