--- a/examples/index.html
+++ b/examples/index.html
@@ -34,7 +34,7 @@ layout: splash
             </h3>
 
 <p>
-   <a href="https://tuxisgiant.bandcamp.com/">Matt O'Connor (of Tuxis Giant)</a>
+   <a target="_blank" href="https://tuxisgiant.bandcamp.com/">Matt O'Connor (of Tuxis Giant)</a>
    <br>
 <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i>
             <br>
@@ -64,7 +64,7 @@ layout: splash
 <br>
 -->
 
- <a href="https://soundcloud.com/richywitthek">RiCHy K</a> 
+ <a target="_blank" href="https://soundcloud.com/richywitthek">RiCHy K</a> 
             <br>
             <br> 
 
@@ -84,7 +84,7 @@ layout: splash
             Old School Hip Hop
             </h3>
 
-            <a href="https://soundcloud.com/thebraincollective">Jack Tarricone (of The Brain Collective)</a>
+            <a target="_blank" href="https://soundcloud.com/thebraincollective">Jack Tarricone (of The Brain Collective)</a>
 
 <p>
   <i>"Excellent service, very professional and easy to work with. Keenan edited his work on pieces that I wanted modified, and was very punctual and flexible throughout the whole process"</i>
@@ -116,7 +116,7 @@ layout: splash
 <br>
 -->
 
-  <a href="https://soundcloud.com/aaron-bobaron">AA Frequency</a>
+  <a target="_blank" href="https://soundcloud.com/aaron-bobaron">AA Frequency</a>
             <br>
             <br> 
 
@@ -137,7 +137,7 @@ layout: splash
 
 <p>
 
-  <a href="http://matthewalanbennett.com">Matthew Bennet (of The Patio Drive Band)</a>
+  <a target="_blank" href="http://matthewalanbennett.com">Matthew Bennet (of The Patio Drive Band)</a>
   <br>
 <i>“Keenan’s mastering was brilliant. All of the hours I spent recording and writing my song became totally worth it once I placed it in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too”</i>
             <br>
@@ -159,7 +159,7 @@ layout: splash
             </h3>
 
 <p>
-  <a href="https://traded.bandcamp.com/">Colin Zelin (of Traded)</a>
+  <a target="_blank" href="https://traded.bandcamp.com/">Colin Zelin (of Traded)</a>
   <br>
 <i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
             <br>
@@ -184,7 +184,7 @@ layout: splash
 
 <p>
 
-  <a href="https://www.reverbnation.com/annamilk">Anna Milk</a>
+  <a target="_blank" href="https://www.reverbnation.com/annamilk">Anna Milk</a>
   <br>
   <br>
 
