--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ Enter your email address below to get started!</b></p>
           </p>
           <br>
 
-          <h4 class="hidden-xs hidden-sm hidden-md" style="font-size: 170%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 100px;">SCROLL FOR MORE ABOUT GET MASTERED</h4>
-          <h4 class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px;">SCROLL FOR MORE ABOUT GET MASTERED</h4>
+          <h4 class="hidden-xs hidden-sm hidden-md" style="font-size: 170%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 100px;">SCROLL TO LEARN MORE ABOUT GET MASTERED</h4>
+          <h4 class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px;">SCROLL TO LEARN MORE ABOUT GET MASTERED</h4>
           <img src="/img/down-arrow.png" alt="arrow" width="10%">
 
 
@@ -130,17 +130,17 @@ Enter your email address below to get started!</b></p>
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 24px;">
-  My name is Keenan, and I founded Get Mastered because there is simply nowhere for artists to connect with experienced audio engineers at affordable, realistic prices.
+  My name is Keenan, and I founded Get Mastered to give artists a way to connect with experienced audio engineers at affordable, realistic prices.
 <br>
 <br>
   <b>
-  Get Mastered strives to connect artists with experienced audio engineers a price that's actually fair.
+  Get Mastered strives to connect artists with experienced audio engineers at a price that's actually fair.
 </b>
 
   <br>
   <br>
 
-  Get Mastered recruits extremely talented up and coming engineers that understand what fair pricing means for independent musicians, and are eager to work for fair wages doing what they love: helping you.
+  Get Mastered recruits extremely talented up and coming engineers that understand what fair pricing means for independent musicians, and are eager to work for fair wages doing what they love: helping you get the sound you want.
 
   <br>
   <br>
@@ -300,79 +300,56 @@ Enter your email address below to get started!</b></p>
             - 
             <br>
             <br> -->
-            <p>
+            <p style="font-size: 25px;">
 
-              <i><b>"Keenan was extremely prompt and professional and made me feel like my project was #1 on his agenda! Very satisfied with Get Mastered and will be using them from now on!"</b></i>
-            <br>
-            Alex Ward
+            <i>"Keenan was <b>extremely prompt and professional</b> and made me feel like my project was #1 on his agenda! <b>Very satisfied</b> with Get Mastered and will be using them from now on!"</i> - Alex Ward
             <br>
             <br>
 
 
-            <i><b>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</b></i>
-            <br>
-            Andrew Nappo
+            <i>"Keenan was <b>amazing</b>, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help <b>take your recordings to the next level</b>, Keenan's your guy."</i> - Andrew Nappo
             <br>
             <br>
 
-            <i><b>"Keenan’s mastering was brilliant. All of the hours I spent recording and writing my song became totally worth it once I placed it in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too"</b></i>
-            <br>
-            Matt Bennett
+            <i>"Keenan’s mastering was <b>brilliant</b>. All of the hours I spent recording and writing my song became totally worth it once I placed it in his hands. I care about my songs a lot, and it quickly became evident that Keenan cared, too."</i> - Matt Bennett
             <br>
             <br>
 
-            <i><b>"Keenan was very professional, polite, and informative working with me on my track. He answered my questions and made sure that it came out the way I wanted. Not only did it come out sounding stellar, but I learned a bit about my craft as well. I'll be using him in the future for mastering my work"</b></i>
-            <br>
-            Asa Jones
+            <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering <b>constructive advice</b> and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - <b>I would recommend him to anyone!</b>"</i> - Matthew O'Connor 
             <br>
             <br>
 
-            <i><b>"I was very impressed with the work Keenan did to my mix.  He helped to make my lo-fi recording sound clean and crisp, was receptive to any further requests, and handled all communications in a professional manner"</b></i>
-            <br>
-            Hilary of btwolf
+            <i>"Keenan was very <b>professional</b>, polite, and informative working with me on my track. He answered my questions and made sure that it came out the way I wanted. Not only did it come out sounding stellar, but I learned a bit about my craft as well. <b>I'll be using him in the future</b> for mastering my work."</i> - Asa Jones
             <br>
             <br>
 
-            <i><b>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</b></i>
-            <br>
-            Max Gunther
+            <i>"Keenan did a <b>great</b> job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that <b>everything was very even and still had punch to it</b>. Great work."</i> - Max Gunther
             <br>
             <br> 
 
-            <i><b>"Getmastered.com is everything a musician needs. Keenan tweaks 
-            everything how you want it to be until you are satisfied and gets 
-            everything done very quickly. If you need something done in really 
+            <i>"I was <b>very impressed</b> with the work Keenan did to my mix.  He helped to make my lo-fi recording sound clean and crisp, was receptive to any further requests, and handled all communications in a <b>professional</b> manner."</i> - Hilary of btwolf
+            <br>
+            <br>
+
+            <i>"<b>Excellent service</b>, very professional and easy to work with. Keenan edited his work on pieces that I wanted modified, and was <b>very punctual</b> and flexible throughout the whole process."</i> - Jack Tarricone
+            <br>
+            <br> 
+
+            <i>"Getmastered.com is everything a musician needs. Keenan tweaks 
+            everything how you want it to be until you are satisfied and <b>gets 
+            everything done very quickly</b>. If you need something done in really 
             short period of time, you can't go wrong with this guy. Great sound 
-            quality and fully professional service"</b></i>
-            <br>
-            Adam of Hope Burn
+            quality and <b>fully professional service</b>."</i> - Adam of Hope Burn
             <br>
             <br>
 
-            <i><b>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</b></i>
-            <br>
-            Colin Zelin
+            <i>“Keenan did an <b>excellent</b> job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i> - Colin Zelin
             <br>
             <br>
 
-            <i><b>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</b></i>
+            <i>"This service was simple and quick and the master that was produced <b>fixed all the problems I never knew were there</b>."</i> - Ezra Selga
             <br>
-            Matthew O'Connor 
-            <br>
-            <br>
-
-            <i><b>"This service was simple and quick and the master that was produced fixed all the problems I never knew were there"</b></i>
-            <br>
-            Ezra Selga
-            <br>
-            <br>  
-
-            <i><b>"Excellent service, very professional and easy to work with. Keenan edited his work on pieces that I wanted modified, and was very punctual and flexible throughout the whole process"</b></i>
-            <br>
-            Jack Tarricone
-            <br>
-            <br>     
-
+            <br>      
 
 
       </p>
