--- a/berkley/index.html
+++ b/berkley/index.html
@@ -86,7 +86,7 @@ Enter your email address below to get started!</b></p>
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
                                 <input type="email" name="_replyto" class="form-control" id="email" placeholder="Your email" required="required" style=" text-align: left; font-size: 15px; font-weight: 700;"/>
-                               <input type="hidden" name="_subject" value="Normal Submission" /></div>
+                                <input type="hidden" name="_subject" value="Student Submission Berkley" /></div>
                         </div>
                     </div>
                     <input type="hidden" name="_next" value="/thank-you" />
@@ -251,9 +251,9 @@ Enter your email address below to get started!</b></p>
                     <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/what-do-you-pay.png" alt="pricing" width="100%">
+            <img class="hidden-sm hidden-xs hidden-md" src="/img/what-do-you-pay-student.png" alt="pricing" width="100%">
 
-            <img class="hidden-lg hidden-xl" src="/img/what-do-you-pay.png" alt="pricing" width="70%">
+            <img class="hidden-lg hidden-xl" src="/img/what-do-you-pay-student.png" alt="pricing" width="70%">
 </div>
 </div>
 <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
