--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ layout: splash
 <!--   <div class="col-lg-12 bg-white" style="margin: 3% 0px;"> -->
 
   <div class="row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
-    <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 600%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Song, Free</h1>
+    <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 600%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Song Free</h1>
 
-    <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song, Free</h1>
+    <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
 
           <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
             Hear the difference we can make to your recordings with a free master, yours to keep.<br><br>
