--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ layout: splash
 Enter your email address below to get started!</b></p>
 <br>
 
+
 <div >
 
 
@@ -96,6 +97,7 @@ Enter your email address below to get started!</b></p>
                     </div>
                 </div>
                 </form>
+                <p style="color: #fff;"><b>absolutely no spam, our promise</b></p>
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
