--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: splash
     <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
 
           <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make to your recordings with a free master, yours to keep.<br><br>
+            Hear the difference we can make to your mix with a free master, yours to keep.<br><br>
 
 <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
 Enter your email address below to get started!</b></p>
