--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: splash
     <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
 
           <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make to your mix with a free master, yours to keep.<br><br>
+            Hear the difference we can make to your mix with a free master, plus complementary mixing feedback, from our experienced engineers.<br><br>
 
 <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
 Enter your email address below to get started!</b></p>
@@ -97,7 +97,7 @@ Enter your email address below to get started!</b></p>
                     </div>
                 </div>
                 </form>
-                <p style="color: #fff;"><b>absolutely no spam, our promise</b></p>
+                <p style="color: #fff;"><b>We don't spam. That's not us</b></p>
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
@@ -133,11 +133,12 @@ Enter your email address below to get started!</b></p>
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 24px;">
-  My name is Keenan, and I founded Get Mastered to give artists a way to connect with experienced audio engineers at affordable, realistic prices.
+  My name is Keenan, and I founded Get Mastered to provide artists and recording hobbyists a chance to grow their production skills through the guidance of an experienced audio engineer.
+
 <br>
 <br>
   <b>
-  Get Mastered strives to connect artists with experienced audio engineers at a price that's actually fair.
+  Get Mastered strives to give artists their own personal, professional mastering engineer to help make their music the absolute best it can be.
 </b>
 
   <br>
