--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: splash
             Hear the difference we can make to your mix with a free master, plus complementary mix feedback, from our experienced engineers.<br><br>
 
 <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
-Enter your email address below to get started!</b></p>
+Enter your email address below to get mastered!</b></p>
 <br>
 
 
@@ -138,7 +138,7 @@ Enter your email address below to get started!</b></p>
 <br>
 <br>
   <b>
-  Get Mastered strives to connect artists with their own personal, professional mastering engineer to help make their music the absolute best it can be.
+  We strive to make your music the absolute best it can be.
 </b>
 
   <br>
