--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@ Enter your email address below to get mastered!</b></p>
 <br>
 <br>
   <b>
-  We strive to make your music the absolute best it can be.
+  We strive to make your music the absolute best it can be, from the ground up.
 </b>
 
   <br>
   <br>
 
-  Get Mastered recruits extremely talented up and coming engineers that understand what fair pricing means for independent musicians, and are eager to work for fair wages doing what they love: helping you get the sound you want.
+  Get Mastered engineers aren't here to make a quick buck; we care about the artists we work with, and we focus on quality above all else. Every master that we send out is thoroughly reviewed and critiqued by our team of engineers, so that you can be sure you are getting the absolute highest quality audio possible.
 
   <br>
   <br>
