--- a/index.html
+++ b/index.html
@@ -133,22 +133,25 @@ Enter your email address below to get mastered!</b></p>
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 24px;">
-  Get Mastered was founded to provide artists and recording hobbyists a chance to grow their production skills through a relationship with an experienced audio engineer.
+  Get Mastered is the only mastering service that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
 
 <br>
 <br>
   <b>
-  We strive to make your music the absolute best it can be, from the ground up.
+  We strive to make your music, and your mixing skills, the absolute best they can be. 
 </b>
 
   <br>
   <br>
-
-  Get Mastered engineers aren't here to make a quick buck; we care about the artists we work with, and we focus on quality above all else. Every master that we send out is thoroughly reviewed and critiqued by our team of engineers, so that you can be sure you are getting the absolute highest quality audio possible.
+  That is why with every master, our engineers include personalized feedback to improve your mixing. We know firsthand that feedback is critical; after all, every master we distribute is reviewed by our team of engineers, to make sure you are getting the absolute best audio possible.
 
   <br>
   <br>
-  In addition to mastering, Get Mastered offers stem mastering, as well as other audio restoration services for podcasters, voiceovers, or anything else audio. <a target="_blank" href="/about/What-Is-Get-Mastered/">Click here for more about us.</a>
+  If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a target="_blank" href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a target="_blank" href="/">your first song free!</a> What do you have to lose?
+
+  <br>
+  <br>
+  <!-- In addition to mastering, Get Mastered offers stem mastering, as well as other audio restoration services for podcasters, voiceovers, or anything else audio. <a target="_blank" href="/about/What-Is-Get-Mastered/">Click here for more about us.</a> -->
 <!-- 
   <br>
   <br>
@@ -159,6 +162,7 @@ Enter your email address below to get mastered!</b></p>
 </div>
 
 
+<!-- 
   <div id="hear" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
@@ -176,11 +180,6 @@ Enter your email address below to get mastered!</b></p>
             </h3>
 
 <p>
-<!--    <b>Matt O'Connor (of Tuxis Giant)</b>
-   <br>
-<i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i>
-            <br>
-            <br> -->
 
 <b>Before:</b>
 
@@ -208,13 +207,6 @@ Enter your email address below to get mastered!</b></p>
             </h3>
 
 <p>
-<!-- <i>“Quote”</i>
-<br>
--->
-
-<!--   <a href="https://soundcloud.com/aaron-bobaron">AA Frequency</a>
-            <br>
-            <br>  -->
 
 <b>Before:</b>
 
@@ -229,14 +221,14 @@ Enter your email address below to get mastered!</b></p>
 
 
 </div>
-</div>
+</div> -->
 
-<div class="col-lg-12" style="padding: 0% 5% 5% 5%;">
+<!-- <div class="col-lg-12" style="padding: 0% 5% 5% 5%;">
 
             <div class="row-fluid" style="padding: 0px;">
-              <a target="_blank" href="/examples/" class="master-color" style="font-size: 350%; text-align: center;">Click HERE for even more examples of our work</a>
+              <a target="_blank" href="/examples/" class="master-color" style="font-size: 350%; text-align: center;">Click here for even more examples of our work</a>
           </div>
-          </div>
+          </div> -->
 
 
 
