--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ layout: splash
     <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
 
           <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make to your mix with a free master, plus complementary mix feedback, from our experienced engineers.<br><br>
+            Hear the difference we can make with a free master, plus mix feedback, from our experienced engineers.<br><br>
 
 <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
-Enter your email address below to get mastered!</b></p>
+Enter your email address below to Get Mastered!</b></p>
 <br>
 
 
@@ -128,7 +128,7 @@ Enter your email address below to get mastered!</b></p>
 
 
 
-<div class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
+<div id="about" class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
 <div class="row-fluid">
   <h1>What is Get Mastered?</h1>
 
@@ -235,28 +235,30 @@ Enter your email address below to get mastered!</b></p>
 
 
 
-  <div id="rates" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+<!--   <div id="rates" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
             <div class="row-fluid">
               <h1 style="font-size: 350%; color: #FFF; text-align: center; text-shadow: 0px 0px 20px #000;">What are our rates after your free master?</h1>
           </div>
-          </div>
+          </div> -->
 
-                    <div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+                    <div id="rates" class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/what-do-you-pay.png" alt="pricing" width="100%">
+            <img class="hidden-sm hidden-xs hidden-md" src="/img/amazing-quality.png" alt="value" width="100%">
 
-            <img class="hidden-lg hidden-xl" src="/img/what-do-you-pay.png" alt="pricing" width="70%">
+            <img class="hidden-lg hidden-xl" src="/img/amazing-quality.png" alt="value" width="100%">
 </div>
 </div>
-<div class="col-lg-6" style="padding: 5%; margin: 0px; background-color: #34AA83;">
+<div class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/what-do-you-get.png" alt="pricing" width="100%">
+            <img class="hidden-sm hidden-xs hidden-md" src="/img/affordable-prices.png" alt="pricing" width="100%">
 
-            <img class="hidden-lg hidden-xl" src="/img/what-do-you-get.png" alt="pricing" width="70%">
+            <img class="hidden-lg hidden-xl" src="/img/affordable-prices.png" alt="pricing" width="100%">
 </div>
 </div>
 
@@ -274,7 +276,7 @@ Enter your email address below to get mastered!</b></p>
 <h1 style="font-size: 300%; color: #000; text-align: center;">Ready? </h1>
 <br>
 
-<h1 style="font-size: 300%; color: #000; text-align: center;"><a target="_blank" href="/submit/">CLICK HERE FOR SUBMISSION INFO</a> </h1>
+<h1 style="font-size: 300%; color: #000; text-align: center;"><a target="_blank" href="/submit/">Click here to submit</a> </h1>
 <br>
 
 
