--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Enter your email address below to Get Mastered!</b></p>
 
   <br>
   <br>
-  That is why with every master, our engineers include personalized feedback to improve your mixing. We know firsthand that feedback is critical; after all, every master we distribute is reviewed by our team of engineers, to make sure you are getting the absolute best audio possible.
+  That is why with every master, our engineers include personalized feedback to improve your mixing. We know firsthand that feedback is critical; after all, every master we distribute is reviewed by two engineers, to make sure you are getting the absolute best audio possible.
 
   <br>
   <br>
@@ -276,7 +276,7 @@ Enter your email address below to Get Mastered!</b></p>
 <h1 style="font-size: 300%; color: #000; text-align: center;">Ready? </h1>
 <br>
 
-<h1 style="font-size: 300%; color: #000; text-align: center;"><a target="_blank" href="/submit/">Click here to submit</a> </h1>
+<h1 style="font-size: 500%; color: #000; text-align: center;"><a target="_blank" href="/submit/">Click here to submit</a> </h1>
 <br>
 
 
