purchase buttons, student rates

--- a/contact/index.html
+++ b/contact/index.html
@@ -11,30 +11,8 @@ layout: splash
 
 <h1 style="font-size: 400%; color: #000; text-align: center;">Ready? </h1>
 <br>
-<!-- <p style="font-size: 22px; color: #000;">
-  Send me high quality bounces of your mixes using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
-</p> -->
 
-
-<p style="font-size: 20px;">
-
-            <b>TO GET MASTERED:</b> Send me a high quality bounce of your mix using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible! <br><br>
-
-            <!-- <b>TO GET MIXED:</b> Send me your high quality audio tracks, time aligned, by bouncing each track individually from the same point in your session. <a href="https://www.youtube.com/watch?v=PVttS0kA7Uc">Here is a tutorial video of how to export tracks as individual audio files from Pro Tools and Logic.</a>
- -->
-          </p>
-
-
-
-<div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
-        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
-            </div>
-
-<div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
-        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
-            </div>
-
-          <p style="font-size: 20px;"><b>Having issues? On mobile? Have another query?</b> Reach out to us using the form below:
+          <p>Reach out to us with some details about your project using the form below, and we will respond as soon as possible:
       <br>
     </p>
 
@@ -56,7 +34,7 @@ layout: splash
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Get Mastered: Submission">Mastering</option>
-                                <option value="Get Mastered: Other">Audio Restoration</option>
+                                <option value="Get Mastered: Other">Stem Mastering</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
@@ -80,6 +58,8 @@ layout: splash
             <br><br>
 
             <p>You can also send your files, questions, and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
+            <br>
+            <br>
 
 
 </div>
