--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Enter your email address below to Get Mastered!</b></p>
 <div class="row-fluid">
   <h1>What is Get Mastered?</h1>
 
-<p style="font-size: 24px;">
+<p>
   Get Mastered is the only mastering service that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
 
 <br>
@@ -247,9 +247,9 @@ Enter your email address below to Get Mastered!</b></p>
   background-attachment: fixed;">
                       <div class="row-fluid">
 
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/amazing-quality.png" alt="value" width="100%">
+            <img class="hidden-sm hidden-xs hidden-md" src="/img/amazing-value.png" alt="value" width="100%">
 
-            <img class="hidden-lg hidden-xl" src="/img/amazing-quality.png" alt="value" width="100%">
+            <img class="hidden-lg hidden-xl" src="/img/amazing-value.png" alt="value" width="100%">
 </div>
 </div>
 <div class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
@@ -259,6 +259,18 @@ Enter your email address below to Get Mastered!</b></p>
             <img class="hidden-sm hidden-xs hidden-md" src="/img/affordable-prices.png" alt="pricing" width="100%">
 
             <img class="hidden-lg hidden-xl" src="/img/affordable-prices.png" alt="pricing" width="100%">
+            <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; left: 14%;">
+            <a href="/" class="btn btn-skin pull-left">Select</a>
+          </div>
+          <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; left: 46%;">
+            <a href="/submit/mastering/" class="btn btn-skin">Select</a>
+            </div>
+            <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; right: 14%;">
+            <a href="/submit/stem-mastering" class="btn btn-skin pull-right" style="margin-right: 13%;">Select</a>
+            </div>
+
+
+
 </div>
 </div>
 
@@ -273,10 +285,13 @@ Enter your email address below to Get Mastered!</b></p>
 <div class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
 <div class="row-fluid">
 
-<h1 style="font-size: 300%; color: #000; text-align: center;">Ready? </h1>
+<h1 style="font-size: 200%; color: #000; text-align: center;">Ready? </h1>
 <br>
 
-<h1 style="font-size: 500%; color: #000; text-align: center;"><a target="_blank" href="/submit/">Click here to submit</a> </h1>
+<h1 class="hidden-sm hidden-xs hidden-md" style="font-size: 500%; color: #000; text-align: center;"><a href="/submit/">Click here to submit</a> </h1>
+
+<h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #000; text-align: center;"><a href="/contact/">Click here to submit</a> </h1>
+
 <br>
 
 
@@ -298,7 +313,7 @@ Enter your email address below to Get Mastered!</b></p>
             - 
             <br>
             <br> -->
-            <p style="font-size: 25px;">
+            <p>
 
             <i>"Keenan was <b>extremely prompt and professional</b> and made me feel like my project was #1 on his agenda! <b>Very satisfied</b> with Get Mastered and will be using them from now on!"</i> - Alex Ward
             <br>
