--- a/submit/stem-mastering/student/index.html
+++ b/submit/stem-mastering/student/index.html
@@ -18,7 +18,7 @@ layout: splash
 
 <p style="font-size: 20px;">
 
-            <b>TO GET MASTERED:</b> Send me a high quality bounce of your mix using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible! <br><br>
+            Send us a zip file of high quality bounces of each of your stems, time aligned from the beginning of your session, using the form below. Please include the coupon code <b>IMASTUDENT</b> in the "message" field for your discounted rates!
 
             <!-- <b>TO GET MIXED:</b> Send me your high quality audio tracks, time aligned, by bouncing each track individually from the same point in your session. <a href="https://www.youtube.com/watch?v=PVttS0kA7Uc">Here is a tutorial video of how to export tracks as individual audio files from Pro Tools and Logic.</a>
  -->
